Fix spacing skills columns

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ th {
 }
 
 .skill-row {
-    width: 30%;
+    width: 50%;
     margin: 100px auto 100px auto;
     text-align: left;
     line-height: 2;
